@@ -283,6 +283,7 @@ $magicWords = array(
 	'newsectionlink'         => array( 1,    '__NEWSECTIONLINK__'     ),
 	'currentversion'         => array( 1,    'CURRENTVERSION'         ),
 	'urlencode'              => array( 0,    'URLENCODE:'             ),
+	'anchorencode'			 => array( 0,	 'ANCHORENCODE'			  ),
 	'currenttimestamp'       => array( 1,    'CURRENTTIMESTAMP'       ),
 	'localtimestamp'         => array( 1,    'LOCALTIMESTAMP'         ),
 	'directionmark'          => array( 1,    'DIRECTIONMARK', 'DIRMARK' ),
